# opensplice

./: CMakeLists.txt  README.md  TargetArch.cmake  minimal_build.sh  opensplice-config.cmake
debian/: changelog  control  copyright  libopensplice64-dev.install
src/services/: makefile
src/services/executables/: makefile
